graphql-parser/tests/snapshots/queries__triple_quoted_literal_win.snap
---
source: graphql-parser/tests/queries.rs
expression: result_win
---
Ok(
    Document {
        definitions: [
            Operation(
                Query(
                    Query {
                        position: Pos(1:1),
                        name: None,
                        variable_definitions: [],
                        directives: [],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:7),
                                Pos(6:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "node",
                                        arguments: [
                                            (
                                                "id",
                                                String(
                                                    "Hello,\n  world!\n",
                                                ),
                                            ),
                                        ],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
